<resources>
    <string name="facebook_app_id">1302262076813478</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="telgu">తెలుగు</string>
    <string name="gujrati">ગુજરતી</string>
    <string name="punjabi">ਪੰਜਾਬੀ</string>
    <string name="francais">français</string>
    <string name="marathi">मराठी</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="intro_slide1_title">Welcome to Gigforce</string>
    <string name="intro_slide1_subtitle">A Job you always have</string>
    <string name="intro_slide2_title">Be a professional</string>
    <string name="intro_slide2_subtitle">Build a profile and train to upgrade your skills</string>
    <string name="intro_slide3_title">Let work happen</string>
    <string name="intro_slide3_subtitle">Set your preference and gigs will find you</string>
    <string name="ob_slide1_title">Onboarding</string>
    <string name="ob_slide1_subtitle">How to - 1</string>
    <string name="ob_slide2_title">Onboarding</string>
    <string name="ob_slide2_subtitle">How to - 2</string>
    <string name="ob_slide3_title">Onboarding</string>
    <string name="ob_slide3_subtitle">How to - 3</string>
    <string name="hello_world">Hello World!</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="rating_text">Rating</string>
    <string name="tasks_done_text">TASK DONE</string>
    <string name="connections_text">CONNECTIONS</string>
    <string name="default_location_text">Location</string>
    <string name="default_distance_text">220KM away</string>
    <string name="education_card_education_text">Education</string>
    <string name="education_card_content_placeholder">Education content to be put here</string>
    <string name="view_more_text"><u>View more</u></string>
    <string name="empty_dash_string">-</string>
    <string name="about_card_about_text">About Me</string>
    <string name="about_card_content_placeholder">About me content to be put here</string>
    <string name="experience_card_experience_text">Experience</string>
    <string name="experience_expanded_add_experience_text">+ Add Experience</string>
    <string name="education_expanded_Education_text">Education</string>
    <string name="education_expanded_skills_text">Skills</string>
    <string name="education_expanded_achievements_text">Achievements</string>
    <string name="education_expanded_add_education_text">+ Add Education</string>
    <string name="education_expanded_add_skill_text">+ Add Skill</string>
    <string name="education_expanded_add_achievement_text">+ Add Achievement</string>
    <string name="education_expanded_user_name">User Name</string>
    <string name="nav_education_text">Education</string>
    <string name="nav_about_text">About me</string>
    <string name="nav_gigs_text">Gigs</string>
    <string name="nav_experience_text">Experience</string>
    <string name="add_skill_sheet_new_skill">New Skill</string>
    <string name="add_skill_sheet_category">Category</string>
    <string name="add_skill_sheet_skill_name">Name of Skill</string>
    <string name="add_achievement_sheet_new_achievement">New Achievement</string>
    <string name="add_achievement_sheet_title">Title *</string>
    <string name="add_achievement_sheet_issuing_authority">Issuing Authority *</string>
    <string name="add_achievement_sheet_location">Location</string>
    <string name="add_achievement_sheet_year">Year * (eg. 2011)</string>
    <string name="add_education_sheet_new_education">New Education</string>
    <string name="add_education_sheet_institution">Institution *</string>
    <string name="add_education_sheet_course">Course *</string>
    <string name="add_education_sheet_degree">Degree *</string>
    <string name="add_education_sheet_start_year">Start Date *</string>
    <string name="add_education_sheet_end_year">End Date *</string>
    <string name="add_contact_new_contact">New Contact</string>
    <string name="add_contact_phone">Phone</string>
    <string name="add_contact_email">Email</string>
    <string name="about_expanded_bio_text">Bio</string>
    <string name="about_expanded_language_text">Language Known</string>
    <string name="about_expanded_add_language_text">+ Add Language</string>
    <string name="about_expanded_contact_text">Contact Details </string>
    <string name="about_expanded_add_contact_text">+ Add Contact</string>
    <string name="add_language_new_language">New Language</string>
    <string name="add_language_name">Language *</string>
    <string name="add_language_speaking_level">Speaking level</string>
    <string name="add_language_writing_level">Writing level</string>
    <string name="title_lang">Select Language</string>
    <string name="login">Login</string>
    <string name="title_login">Please Login</string>
    <string name="mobile_login">Enter Mobile Number</string>
    <string name="confirm_login">Confirm</string>
    <string name="guidelines_video_resume">Guidelines</string>
    <string name="button_upload_video">UPLOAD</string>
    <string name="title_video_resume">Video Resume</string>
    <string name="why_video_resume">why video resume is imp?</string>
    <string name="desc1_video_resume">let us know more about you</string>
    <string name="desc2_video_resume">no resume and no interview</string>
    <string name="otp_sign_in_up">Login</string>
    <string name="otp_enter_mobile_num">Enter your mobile number for\n     OTP verification</string>
    <string name="otp_verify_account">Verify Account</string>
    <string name="mobile_verified">Mobile verification success!</string>
    <string name="otp_notcorrect">Wrong Password !!</string>
    <string name="otp_sent_otp_account">We have send the OTP on Number\n will apply auto to the fields</string>
    <string name="otp_hint">_ _ _ _ _ _</string>
    <string name="otp_verify">Verify</string>
    <string name="otp_reenter_mobile">Re-enter mobile number</string>
    <string name="otp_send_otp">SEND OTP</string>
    <string name="add_experience_new_experience">New Experience</string>
    <string name="add_experience_title">Role *</string>
    <string name="add_experience_employment_type">Employment Type *</string>
    <string name="add_experience_location">Location *</string>
    <string name="add_experience_start_date">Start Date *</string>
    <string name="add_experience_end_date">End Date *</string>
    <string name="add_experience_currently_working">Currently Work Here</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="back_text">Back</string>
    <string name="okay_text">Okay</string>
    <string name="okay_text_cap">OKAY</string>
    <string name="add_more_text">Add more</string>
    <string name="verified_text">Verified</string>
    <string name="tags_text">Tags of User</string>
    <string name="about_me_text">About me of user</string>
    <string name="to_be_filled_from_profile_data">To Be Filled From Profile Data</string>
    <string name="placeholder_image_view">Image to be loaded</string>
    <string name="institution">Institution</string>
    <string name="course_name">Course</string>
    <string name="degree">Degree</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="delete">delete</string>
    <string name="edit_achievement">Edit Achievement</string>
    <string name="title">Title</string>
    <string name="authority">Authority</string>
    <string name="location">Location</string>
    <string name="year">year</string>
    <string name="year_text">Year</string>
    <string name="edit_skill">Edit Skill</string>
    <string name="edit_experience">Edit Experience</string>
    <string name="employment_title">Employment Title</string>
    <string name="employment_type">Employment Type</string>
    <string name="new_tag_hint">New Tag</string>
    <string name="go_back">Go Back</string>
    <string name="add">Add</string>
    <string name="veriScreenTitle">Hello Giger!</string>
    <string name="veri_address_title">"Step 1 : Please add your Address"</string>
    <string name="veri_add_address">"Address"</string>
    <string name="veri_add_doc_front">"Front Side"</string>
    <string name="veri_add_doc_back">"Back Side"</string>
    <string name="veri_pan_title">"Step 5 : Upload your Pan"</string>
    <string name="veri_aadhaar_title">"Step 2 : Upload your Aadhaar"</string>
    <string name="veri_no_aadhaar">"No Aadhaar! Skip>>"</string>
    <string name="veri_dl_title">"Step 3 : Upload your Driving License"</string>
    <string name="veri_bank_title">"Step 4 : Please add your Bank Details"</string>
    <string name="veri_add_bank">"Add Bank Details"</string>
    <string name="veri_done">Hurray!!!\nKYC Documents submitted.\nWe will let you know once Verified.</string>
    <string name="veri_hint_address_line1">"Address Line1"</string>
    <string name="veri_hint_address_line2">"Address Line2"</string>
    <string name="veri_hint_city">City</string>
    <string name="veri_hint_state">State</string>
    <string name="veri_hint_pin">Pincode</string>
    <string name="veri_hint_account_name">Name of the Account Holder</string>
    <string name="update_document_picture">Update Picture</string>
    <string name="remove_document_picture">Remove Picture</string>
    <string name="document_picture">Image Option</string>
    <string name="hs_rv_title">Dunzo Deliveries </string>
    <string name="hs_rv_subtitle">+2 more </string>
    <string name="hs_rv_date">11</string>
    <string name="hs_rv_month">April</string>
    <string name="hs_rv_comment">Last delivery was 20 min ago</string>
    <string name="select_skill">Select Skill</string>
    <string name="next">NEXT</string>
    <string name="edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="driving">Driving</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="skip">Skip</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="add_interest">Add Interest</string>
    <string name="let_us_know_your_interest_so_that_we_can_show_the_best_jobs_for_you">Let us know your interest so that we can show the best jobs for you</string>
    <string name="select_jobs_you_are_interested_in">Select Jobs you are interested in</string>
    <string name="bike_rider">Bike Rider</string>
    <string name="delivery_executive">Delivery Executive</string>
    <string name="warehouse_helper">Warehouse Helper</string>
    <string name="operator">Operator</string>
    <string name="technician">Technician</string>
    <string name="supervisor_manager">Supervisor/Manager</string>
    <string name="inspector">Inspector</string>
    <string name="tele_calling_">Tele calling</string>
    <string name="factory_worker">Factory Worker</string>
    <string name="security">Security</string>
    <string name="cleaner">Cleaner</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="create_new_group">Create New Group</string>
    <string name="please_enter_otp_received">Please Enter OTP Received</string>
    <string name="enter_otp_here">Enter OTP Here</string>
</resources>