<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/hs1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/hs_rv_title"
        app:layout_constraintStart_toEndOf="@id/hs1_month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hs1_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/hs_rv_subtitle"
        app:layout_constraintStart_toEndOf="@id/hs1_date"
        app:layout_constraintTop_toBottomOf="@+id/hs1_title" />

    <TextView
        android:id="@+id/hs1_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/hs_rv_comment"
        app:layout_constraintStart_toEndOf="@id/hs1_date"
        app:layout_constraintTop_toBottomOf="@+id/hs1_subtitle" />

    <TextView
        android:id="@+id/hs1_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rect_border_gig_hs"
        android:text="@string/hs_rv_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hs1_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:background="@drawable/rect_border_gig_hs"
        android:text="@string/hs_rv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hs1_month" />

</androidx.constraintlayout.widget.ConstraintLayout>