<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.abhijai.gigschatdemo.contacts_module.ui.MainActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_icon_edit_enrollment_menu"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_menu_icon_chat"
        android:orderInCategory="100"

        android:title="@string/call"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_call_menu_enrollment"
        android:orderInCategory="100"
        android:title="@string/chat"
        app:showAsAction="collapseActionView" />

</menu>
