<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--    tools:context=".modules.auth.ui.main.ConfirmOtpFragment"-->

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/line2view"
        style="@style/text_pagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Confirm OTP" />

    <TextView
        android:id="@+id/areaview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:text="@string/please_enter_otp_received"
        app:layout_constraintStart_toStartOf="@+id/line2view"
        app:layout_constraintTop_toBottomOf="@+id/line2view" />

    <EditText
        android:id="@+id/edit_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_otp_here"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/areaview"
        app:layout_constraintTop_toBottomOf="@+id/areaview" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="@dimen/size_36"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/edit_otp"
        app:layout_constraintTop_toBottomOf="@+id/edit_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>